Update yaml files after coherence operator test